# rust_framework

./: .dockerignore  .env.prod  .env.prod.linux  .gitignore  .ignore  .watchignore  Cargo.toml  build.rs  diesel.toml  dockerfile  license  package.json  readme.md
.cargo/: config.toml
config/server/: nginx.conf
migrations/2024-10-19-175541_create_tables/: down.sql  up.sql
migrations/2024-10-19-175541_create_users/: up.sql
migrations/2024-10-19-175608_create_events/: up.sql
resources/css/: app.css  desktop_template.css  general.css  web_template.css
resources/js/: app.js
resources/js/models/: ajax.js  ajax_request.js  desktop_controls.js  drop_zone_controls.js  modal.js  tooltip.js
resources/views/: base.html  event_manager.html  index.html  modal_add_event.html  modal_add_user.html  user_manager.html
resources/views/event/: event_item_module_ajax.html  event_manager.html  modal_add_event.html
resources/views/html_module/shared/: event_item_module.html  event_item_module_ajax.html  user_item_module.html  user_item_module_ajax.html
resources/views/template/: base_tera_template.html  navbar.html  section.html
resources/views/template/tera/: base_tera_template.html  desktop_tera_template.html  display_type_tera.html  footer_tera.html  general_macro_tera.html  navbar_desktop_tera.html  navbar_tera.html  section_desktop_tera.html  section_tera.html
resources/views/user/: modal_add_user.html  user_item_module.html  user_item_module_ajax.html  user_manager.html
src/: database.rs  main.rs  models.rs  web_config.rs
src/config/: config.rs  mod.rs  resource_config.rs  resources.rs  route_config.rs  routes.rs
src/config/update/: mod.rs  resources.rs  routes.rs
src/controllers/: _event_controller.rs  _user_controller.rs  event_controller.rs  mod.rs  page_builder_controller.rs  test_controller.rs  user_controller.rs
src/lib/enum_own/: Cargo.toml
src/macros/: enum_macro.rs
src/models/: _models.rs  event_model.rs  mod.rs  models.rs  user_model.rs
src/repository/: _event_repository.rs  _user_repository.rs  event_repository.rs  mod.rs  user_repository.rs
src/schema/: _schema.rs  mod.rs
src/utils/: ajax_message.rs  common.rs  env.rs  mod.rs
src/utils/builder/: mod.rs
src/utils/command/: execute.rs
src/utils/conversion/: mod.rs  model_conversion.rs
src/utils/export/: export.rs
src/utils/server/: browser.rs  mod.rs  server.rs  web_server.rs  web_view.rs
src/utils/template_engine/: debug_template_engine.rs  mod.rs  template.rs  tera_template_engine.rs
src/utils/test/: gecko_driver_api.rs  mod.rs
src/utils/transform/: db_transform.rs  mod.rs
src/view/: event_manager_builder.rs  event_manager_view.rs  event_table.rs  mod.rs  test_view.rs
templates/: add_event.html  base.html  index.html  register.html
(+37 files in other folders)
