[package]
name = "event_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tera = "1.17"
actix-files = "0.6"
diesel = { version = "2.0", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = "0.23", features = ["bundled"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.1", features = ["v4"] }
r2d2 = "0.8"

[dependencies.serde_derive]
version = "1.0"

[dependencies.diesel_migrations]
version = "2.0"

