[package]
name = "event_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.6"
tera = "1.17"
actix-files = "0.6"
diesel = { version = "2.0", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.1", features = ["v4"] }
r2d2 = "0.8"
env_logger = "0.11.5"
log = "0.4"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
wry = "0.46.3"
tao = "0.30.3"

mysql = "25.0.1"
csv = "1.1.6"

[dependencies.serde_derive]
version = "1.0"

[dependencies.diesel_migrations]
version = "2.0"

