[package]
name = "event_manager"
version = "0.1.0"
edition = "2021"

build = "build.rs"


[build-dependencies]
glob = "0.3"

[dependencies]
actix-web = "4.0"
actix-rt = "2.6"
tera = "1.17"
actix-files = "0.6"
diesel = { version = "2.0", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.16.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.1", features = ["v4"] }
r2d2 = "0.8"
env_logger = "0.11.5"
log = "0.4"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
wry = "0.48.1"
tao = "0.31.1"

mysql = "25.0.1"
csv = "1.1.6"

html-escape = "0.2"
regex = "1.11.0"
glob = "0.3.2"
rand = "0.8.5"
base64 = "0.22.1"
reqwest = "0.12.12"


syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"



[dependencies.serde_derive]
version = "1.0"

[dependencies.diesel_migrations]
version = "2.0"


[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 16
lto = false


[lib]
name = "enum_macro"
path = "src/macros/enum_macro.rs" # Chemin correct vers lib.rs
proc-macro = true          # Obligatoire pour les macros procédurales


# Ajoutez cette section pour définir une cible binaire
[[bin]]
name = "rust_framework"
path = "src/main.rs"
